[project]
name = "Project-Template"
version = "0.1.0"
description = " Use this to Create Production ready projects"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
]